force-app/main/default/objects/CampaignMember/fields/Customer_Survey_Link__c.field-meta.xml
<CustomField>
    <fullName>Customer_Survey_Link__c</fullName>
    <formula>&quot;https://npncommunity.force.com/ESPCommunity/TakeSurvey?id=a4y1W000009C5BtQAK&amp;cId=&quot;&amp;ContactId&amp;&quot;caId=none&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Survey Link</label>
    <type>Text</type>
</CustomField>