force-app/main/default/objects/CampaignMember/fields/Lead_Owner__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner__c</fullName>
    <description>As per Jira #SDS-3047 - To Display &apos;Lead Owner&apos; in a Campaign Members Layout</description>
    <formula>Lead.Lead_Owner_Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Owner</label>
    <type>Text</type>
</CustomField>