force-app/main/default/objects/CampaignMember/fields/Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status__c</fullName>
    <description>SDS-2871: Campaign MGMT: Display Lead Status in a Campaign Members Layout</description>
    <formula>TEXT( Lead.Status )</formula>
    <label>Lead Status</label>
    <type>Text</type>
</CustomField>